# BmaiboxSvr

./: AI盒子Web接口协议V1.0.3.docx  CMakeLists.txt  README.md
rapidjson/: document.h  rapidjson.h
src/: Config.cpp  Config.h  MqSvr.cpp  MqSvr.h  ProcCmd.cpp  ProcCmd.h  SvrMain.cpp  SvrMain.h  WsMqSvr.cpp  WsMqSvr.json  alarm_yyyyMMdd-HHmmssSSS.txt  cameras_configure(1).json  cameras_configure.json  configure.jsone  logger.cpp  logger.h  util.cpp
src/http/: HttpThread.cpp  HttpThread.h  httpclient.cpp  httpclient.h  httpserver.cpp  httpserver.h  mongoose.c.6.7.1  mongoose.h.6.7.1  netclient.c  ntpstat.c  reboot.sh  searchdir.cpp
src/services/: service_base.cpp  service_base.h  service_linux.cpp  service_linux.h  service_windows.cpp  service_windows.h
src/util/: HardDiskManager.h  defs.h  ifinfo.c  ifinfo.h  utils.cpp  utils.h
test/: eth0  logger.cpp  logger.h  sm3i.txt  smi.txt  smi1.txt  test.cpp  test.vcxproj  test.vcxproj.filters  test2.cpp
test/x64/Debug/: vc140.idb  vc141.idb
test/x64/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
